# touhou-rpc-for-linux

./: Cargo.toml  NOTICE  README.md  discord.rs  memory.rs  process.rs  touhou-rpc-for-linux-x86_64
src/: common.rs  games.rs  main.rs
