[package]
name = "touhou-rpc-for-linux"
version = "0.1.0"
edition = "2021"
description = "Discord Rich Presence for the Touhou series under Wine/Proton on Linux"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"

[profile.release]
lto = "thin"
strip = true
opt-level = 3
